--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,9 @@
 ></app-model-loader> -->
 
 <app-player
-  [path]="'./assets/zombie/mremireh_o_desbiens.fbx'"
+  [path]="'./assets/models-3d/DefaultCharacterMeshPolyart.fbx'"
   [positionY]="-58"
+  [rotationX]="1.5"
   [scale]="0.2"
   [name]="'Player'"
   [gender]="'male'"
@@ -29,9 +30,11 @@
 <app-water-wave-plane></app-water-wave-plane> -->
 
 <app-load-text
-  [text]="'Principal'"
+  [text]="'Logo'"
+  [name]="'Logo'"
   [positionX]="-10"
-  [positionY]="75"
+  [positionY]="15"
+  [positionZ]="-10"
   [positionZ]="0"
   [fontSize]="5"
 ></app-load-text>
