--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,30 @@
 <app-description></app-description>
-<!-- <app-model-loader
+<app-model-loader
   [path]="'./assets/models-3d/AltoForno.fbx'"
-  [positionY]="-58"
+  [positionY]="9"
+  [positionZ]="-150"
+  [positionX]="50"
+  [name]="'AltoForno'"
   [rotationY]="1.5"
   [scale]="0.2"
-></app-model-loader> -->
+></app-model-loader>
 
 <app-player
   [path]="'./assets/models-3d/DefaultCharacterMeshPolyart.fbx'"
-  [positionY]="-58"
-  [rotationX]="1.5"
+  [positionY]="0"
+  [rotationY]="1"
   [scale]="0.2"
   [name]="'Player'"
   [gender]="'male'"
 ></app-player>
 
-
 <app-model-loader
   [path]="'./assets/LowPolyTerrain.FBX'"
-  [positionY]="-58"
+  [positionY]="0"
   [rotationY]="1.5"
   [scale]="20"
   [color]="'#49BB58'"
+  [name]="'Ground'"
 ></app-model-loader>
 
 <!-- <app-wave-plane></app-wave-plane>
@@ -29,7 +32,7 @@
 <app-slime-wave-plane></app-slime-wave-plane>
 <app-water-wave-plane></app-water-wave-plane> -->
 
-<app-load-text
+<!-- <app-load-text
   [text]="'Logo'"
   [name]="'Logo'"
   [positionX]="-10"
@@ -37,8 +40,6 @@
   [positionZ]="-10"
   [positionZ]="0"
   [fontSize]="5"
-></app-load-text>
-
-<!-- <app-teste2></app-teste2> -->
+></app-load-text> -->
 
 <app-physics></app-physics>
