--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-description></app-description>
 
 <app-fbx-loader
-  [path]="'./assets/models-3d/AltoForno.fbx'"
+  [path]="'./assets/models3d/AltoForno.fbx'"
   [positionY]="9"
   [positionZ]="-150"
   [positionX]="50"
@@ -11,7 +11,7 @@
 ></app-fbx-loader>
 
 <app-player
-  [path]="'./assets/models-3d/DefaultCharacterMeshPolyart.fbx'"
+  [path]="'./assets/models3d/DefaultCharacter/DefaultCharacterMeshPolyart.fbx'"
   [positionY]="0"
   [rotationY]="1"
   [scale]="0.2"
@@ -20,7 +20,7 @@
 ></app-player>
 
 <app-fbx-loader
-  [path]="'./assets/LowPolyTerrain.FBX'"
+  [path]="'./assets/models3d/LowPolyTerrain.FBX'"
   [positionY]="0"
   [rotationY]="1.5"
   [scale]="20"
@@ -45,7 +45,7 @@
   [positionY]="0"
   [positionZ]="-130"
   [rotationY]="0.3"
-  [path]="'assets/tactical_droid/scene.gltf'"
+  [path]="'assets/models3d/TacticalDroid/scene.gltf'"
 ></app-gltf-loader>
 
 <app-physics></app-physics>
