--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,3 +49,11 @@
 ></app-gltf-loader>
 
 <app-physics></app-physics>
+<app-players></app-players>
+<!-- <app-document-list></app-document-list> -->
+<!-- <app-document></app-document> -->
+<app-other-player
+    [path]="'./assets/models3d/DefaultCharacter/DefaultCharacterMeshPolyart.fbx'"
+  [rotationY]="1"
+  [scale]="0.2"
+  [gender]="'male'"></app-other-player>
