--- a/src/app/components/socket-players/socket-players.component.html
+++ b/src/app/components/socket-players/socket-players.component.html
@@ -1,7 +1,7 @@
-<!-- <div class="sidenav">
+<div class="sidenav">
   <span
     *ngFor="let player of _obsPlayer | async"
   >
-    {{ player.uid }}
+    {{ player.username }}
   </span>
-</div> -->
+</div>
