--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-description></app-description>
 
-<app-fbx-loader
+<app-model-loader
   [path]="'./assets/models3d/AltoForno.fbx'"
   [positionY]="9"
   [positionZ]="-150"
@@ -8,27 +8,20 @@
   [name]="'AltoForno'"
   [rotationY]="1.5"
   [multiplyScalar]="0.2"
-></app-fbx-loader>
+  [type]="'fbx'"
+></app-model-loader>
 
-<app-player
-  [path]="'./assets/models3d/CharacterRPG/CharacterBaseMesh.fbx'"
-  [positionY]="0"
-  [rotationY]="1"
-  [scale]="0.2"
-  [name]="'Player'"
-  [gender]="'male'"
-></app-player>
-
-<app-fbx-loader
+<app-model-loader
   [path]="'./assets/models3d/LowPolyTerrain.FBX'"
   [rotationY]="1.5"
   [multiplyScalar]="40"
   [scaleY]="0.2"
   [color]="'#49BB58'"
   [name]="'Ground'"
-></app-fbx-loader>
+  [type]="'fbx'"
+></app-model-loader>
 
-<app-load-text
+<app-text-loader
   [text]="'Logo'"
   [name]="'Logo'"
   [positionX]="-10"
@@ -36,23 +29,17 @@
   [positionZ]="-10"
   [positionZ]="0"
   [fontSize]="5"
-></app-load-text>
+></app-text-loader>
 
-<app-gltf-loader
-  [scale]="50"
+<app-model-loader
+  [multiplyScalar]="50"
   [name]="'Robot'"
   [positionX]="-180"
-  [positionY]="0"
   [positionZ]="-130"
   [rotationY]="0.3"
   [path]="'assets/models3d/TacticalDroid/scene.gltf'"
-></app-gltf-loader>
+></app-model-loader>
 
-
+<app-player></app-player>
+<app-socket-players></app-socket-players>
 <app-physics></app-physics>
-<app-socket-players
-  [path]="'./assets/models3d/CharacterRPG/CharacterBaseMesh.fbx'"
-  [rotationY]="1"
-  [scale]="0.2"
-  [gender]="'male'"
-></app-socket-players>
