removendo  objeto denecessário

--- a/src/app/components/socket-players/socket-players.component.html
+++ b/src/app/components/socket-players/socket-players.component.html
@@ -1,7 +1,5 @@
 <div class="sidenav">
-  <span
-    *ngFor="let player of _obsPlayer | async"
-  >
+  <span *ngFor="let player of players">
     {{ player.username }}
   </span>
 </div>
