Animação do socket-player

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-description></app-description>
 
-<app-model-loader
+<!-- <app-model-loader
   [path]="'./assets/models3d/AltoForno.fbx'"
   [positionY]="9"
   [positionZ]="-150"
@@ -9,7 +9,7 @@
   [rotationY]="1.5"
   [multiplyScalar]="0.2"
   [type]="'fbx'"
-></app-model-loader>
+></app-model-loader> -->
 
 <app-model-loader
   [path]="'./assets/models3d/LowPolyTerrain.FBX'"
@@ -21,7 +21,7 @@
   [type]="'fbx'"
 ></app-model-loader>
 
-<app-text-loader
+<!-- <app-text-loader
   [text]="'Logo'"
   [name]="'Logo'"
   [positionX]="-10"
@@ -38,7 +38,7 @@
   [positionZ]="-130"
   [rotationY]="0.3"
   [path]="'assets/models3d/TacticalDroid/scene.gltf'"
-></app-model-loader>
+></app-model-loader> -->
 
 <app-player></app-player>
 <app-socket-players></app-socket-players>
