Adicionando tela de personalização do usuário

--- a/src/app/ui/description/description.component.html
+++ b/src/app/ui/description/description.component.html
@@ -3,3 +3,26 @@
 <div class="description-web">
   Passe o mouse sobre os itens para obter informações sobre eles.
 </div>
+
+<div class="action-buttons form-group">
+  <div class="btn-group">
+    <button class="btn btn-outline-secondary" (click)="edit()">
+      <i class="fa-solid fa-user-astronaut"></i>
+    </button>
+  </div>
+  <div class="btn-group">
+    <button class="btn btn-outline-secondary" (click)="edit()">
+      <i class="fa-solid fa-apple-whole"></i>
+    </button>
+  </div>
+  <div class="btn-group">
+    <button class="btn btn-outline-secondary" (click)="edit()">
+      <i class="fa-solid fa-baseball"></i>
+    </button>
+  </div>
+  <div class="btn-group">
+    <button class="btn btn-outline-secondary" (click)="edit()">
+      <i class="fa-solid fa-bolt"></i>
+    </button>
+  </div>
+</div>
