--- a/src/app/ui/description/description.component.scss
+++ b/src/app/ui/description/description.component.scss
@@ -29,6 +29,20 @@
   text-align: center;
 }
 
+.action-buttons {
+  color: #fff;
+  font-family: sans-serif;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 5px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  max-width: 300px;
+  align-items: center;
+  text-align: center;
+}
+
 
 .label {
   color: #fff;
