--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,5 @@ body {
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+@import "../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
+@import "~ngx-toastr/toastr";
