Atualizando skin multiplayer

--- a/src/app/ui/edit-player/edit-player.component.html
+++ b/src/app/ui/edit-player/edit-player.component.html
@@ -110,6 +110,6 @@
 </form>
 <div class="modal-footer">
   <div class="container col-md-12 text-center">
-    <button type="button" class="btn btn-outline-secondary">Fechar</button>
+    <button type="button" class="btn btn-outline-primary" (click)="save()">Salvar</button>
   </div>
 </div>
