Adicionando noise scale ao ritimo da música

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,3 +44,10 @@
 <app-socket-players></app-socket-players>
 <app-physics></app-physics>
 <app-audio></app-audio>
+<app-individual-player
+[positionX]="-50"
+[positionY]="0"
+[positionZ]="-500"
+[actualState]="'dance'"
+
+></app-individual-player>
