--- a/src/app/ui/edit-player/edit-player.component.html
+++ b/src/app/ui/edit-player/edit-player.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<div class="modal-header" >
   <h4 class="modal-title" id="modal-title">Editar Personagem</h4>
   <button
     type="button"
@@ -7,38 +7,31 @@
     (click)="modal.dismiss('Cross click')"
   ></button>
 </div>
-<div class="modal-body">
-
-  <form class="row">
-    <div class="col-lg-8">
-      <canvas
-        #canvas
-        id="canvas"
-        style="height: 100%; width: 100%; padding: 10px; margin: 10px"
-      ></canvas>
-    </div>
-    <div class="col-auto container col-lg-4 text-center">
-      <div *ngFor="let style of styleKeys" class="form-group">
-        <div class="btn-group">
-          <button
-            class="btn btn-outline-secondary"
-            (click)="changeField(style, -1)"
-          >
-            <i class="fa-solid fa-angles-left"></i>
-          </button>
-          <button class="btn btn-secondary namelabel" disabled>
-            {{ style }}
-          </button>
-          <button
-            class="btn btn-outline-secondary"
-            (click)="changeField(style, 1)"
-          >
-            <i class="fa-solid fa-angles-right"></i>
-          </button>
-        </div>
+<div class="modal-body row">
+  <div class="col-lg-8">
+    <canvas #canvas id="canvas" style="height: 100%; width: 100%"></canvas>
+  </div>
+  <div class="col-auto container col-lg-4 text-center">
+    <div *ngFor="let style of styleKeys" class="form-group">
+      <div class="btn-group">
+        <button
+          class="btn btn-outline-secondary"
+          (click)="changeField(style, -1)"
+        >
+          <i class="fa-solid fa-angles-left"></i>
+        </button>
+        <button class="btn btn-secondary namelabel" disabled>
+          {{ style }}
+        </button>
+        <button
+          class="btn btn-outline-secondary"
+          (click)="changeField(style, 1)"
+        >
+          <i class="fa-solid fa-angles-right"></i>
+        </button>
       </div>
     </div>
-  </form>
+  </div>
 </div>
 <div class="modal-footer">
   <div class="container col-md-12 text-center">
