--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
 <app-player></app-player>
 <app-socket-players></app-socket-players>
 <app-physics></app-physics>
-<!-- <app-audio></app-audio> -->
+<app-audio></app-audio>
 
 <app-individual-player
   [positionX]="-50"
