Removendo consoles e limpando código

--- a/src/app/components/audio/audio.component.html
+++ b/src/app/components/audio/audio.component.html
@@ -1,6 +1,6 @@
-<app-individual-player
+<app-character
   [positionX]="-50"
   [positionY]="0"
   [positionZ]="-500"
   [actualState]="'dance'"
-></app-individual-player>
+></app-character>
