--- a/src/app/components/socket-players/socket-players.component.html
+++ b/src/app/components/socket-players/socket-players.component.html
@@ -6,9 +6,9 @@
 
 <div class="main">
   <div *ngFor="let uid of playersOn">
-    <app-individual-player
+    <app-character
       [uid]="uid"
       [players]="players"
-    ></app-individual-player>
+    ></app-character>
   </div>
 </div>
