--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,6 @@
 
 <app-player></app-player>
 <app-socket-players></app-socket-players>
-<app-audio></app-audio>
+<!-- <app-audio></app-audio> -->
 
 
