--- a/src/app/ui/description/description.component.html
+++ b/src/app/ui/description/description.component.html
@@ -6,23 +6,23 @@
 
 <div class="action-buttons form-group">
   <div class="btn-group">
-    <button class="btn btn-outline-secondary" (click)="edit()">
+    <label class="btn btn-outline-secondary" (click)="edit()">
       <i class="fa-solid fa-user-astronaut"></i>
-    </button>
+    </label>
   </div>
   <div class="btn-group">
-    <button class="btn btn-outline-secondary" (click)="edit()">
+    <label class="btn btn-outline-secondary" (click)="edit()">
       <i class="fa-solid fa-apple-whole"></i>
-    </button>
+    </label>
   </div>
   <div class="btn-group">
-    <button class="btn btn-outline-secondary" (click)="edit()">
+    <label class="btn btn-outline-secondary" (click)="edit()">
       <i class="fa-solid fa-baseball"></i>
-    </button>
+    </label>
   </div>
   <div class="btn-group">
-    <button class="btn btn-outline-secondary" (click)="edit()">
+    <label class="btn btn-outline-secondary" (click)="edit()">
       <i class="fa-solid fa-bolt"></i>
-    </button>
+    </label>
   </div>
 </div>
