--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
   [type]="'fbx'"
 ></app-model-loader>
 
-<!-- <app-text-loader
+<app-text-loader
   [text]="'Logo'"
   [name]="'Logo'"
   [positionX]="-10"
@@ -34,14 +34,14 @@
 <app-model-loader
   [multiplyScalar]="50"
   [name]="'Robot'"
-  [positionX]="0"
+  [positionX]="-300"
   [positionZ]="-130"
   [rotationY]="0.3"
   [path]="'assets/models3d/TacticalDroid/scene.gltf'"
-></app-model-loader> -->
+></app-model-loader>
 
 <app-player></app-player>
 <app-socket-players></app-socket-players>
-<!-- <app-audio></app-audio> -->
+<app-audio></app-audio>
 
 
