teste de positional audio com rdc

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,17 +11,7 @@
   [type]="'fbx'"
 ></app-model-loader> -->
 
-<app-model-loader
-  [path]="'./assets/models3d/LowPolyTerrain.FBX'"
-  [rotationY]="1.5"
-  [multiplyScalar]="40"
-  [scaleY]="0.2"
-  [color]="'#49BB58'"
-  [name]="'Ground'"
-  [type]="'fbx'"
-></app-model-loader>
-
-<app-text-loader
+<!-- <app-text-loader
   [text]="'Logo'"
   [name]="'Logo'"
   [positionX]="-10"
@@ -38,10 +28,20 @@
   [positionZ]="-130"
   [rotationY]="0.3"
   [path]="'assets/models3d/TacticalDroid/scene.gltf'"
+></app-model-loader> -->
+
+<app-model-loader
+  [path]="'./assets/models3d/LowPolyTerrain.FBX'"
+  [rotationY]="1.5"
+  [multiplyScalar]="40"
+  [scaleY]="0.2"
+  [color]="'#49BB58'"
+  [name]="'Ground'"
+  [type]="'fbx'"
 ></app-model-loader>
 
 <app-player></app-player>
 <app-socket-players></app-socket-players>
-<app-audio></app-audio>
+<!-- <app-audio></app-audio> -->
 
-
+<app-chat></app-chat>
