--- a/src/app/components/socket-players/socket-players.component.html
+++ b/src/app/components/socket-players/socket-players.component.html
@@ -1,8 +1,8 @@
-<div class="sidenav">
+<!-- <div class="sidenav">
   <span *ngFor="let player of players">
     {{ player.username }}
   </span>
-</div>
+</div> -->
 
 <div class="main">
   <div *ngFor="let uid of playersOn">
