--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
   [type]="'fbx'"
 ></app-model-loader> -->
 
-<!-- <app-text-loader
+<app-text-loader
   [text]="'Logo'"
   [name]="'Logo'"
   [positionX]="-10"
@@ -28,7 +28,7 @@
   [positionZ]="-130"
   [rotationY]="0.3"
   [path]="'assets/models3d/TacticalDroid/scene.gltf'"
-></app-model-loader> -->
+></app-model-loader>
 
 <app-model-loader
   [path]="'./assets/models3d/LowPolyTerrain.FBX'"
@@ -42,6 +42,6 @@
 
 <app-player></app-player>
 <app-socket-players></app-socket-players>
-<!-- <app-audio></app-audio> -->
+<app-audio></app-audio>
 
-<app-chat></app-chat>
+<!-- <app-chat></app-chat> -->
