Adicionando IA com classificação de imagens via webcam

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
   [type]="'fbx'"
 ></app-model-loader> -->
 
-<app-text-loader
+<!-- <app-text-loader
   [text]="'Logo'"
   [name]="'Logo'"
   [positionX]="-10"
@@ -19,16 +19,16 @@
   [positionZ]="-10"
   [positionZ]="0"
   [fontSize]="5"
-></app-text-loader>
+></app-text-loader> -->
 
-<app-model-loader
+<!-- <app-model-loader
   [multiplyScalar]="50"
   [name]="'Robot'"
   [positionX]="-300"
   [positionZ]="-130"
   [rotationY]="0.3"
   [path]="'assets/models3d/TacticalDroid/scene.gltf'"
-></app-model-loader>
+></app-model-loader> -->
 
 <app-model-loader
   [path]="'./assets/models3d/LowPolyTerrain.FBX'"
@@ -45,3 +45,4 @@
 <app-audio></app-audio>
 
 <!-- <app-chat></app-chat> -->
+<app-classification></app-classification>
